# PlaylistManager

./: .flaskenv  .gitignore  LICENSE  MANIFEST.in  README.md  Untitled Diagram.drawio  erd.drawio  pyproject.toml  requirements.txt  test.json  test2.json
Gustelfy/: __main__.py  app.py  basemodels.py  database.py  main.py  session.py  spotify_api.py  test.py
Gustelfy/database/: database.py  database_old.py  interface.py  oracle_con.py  sqlite_con.py
Gustelfy/objects/: __init__.py  album.py  artist.py  playlist.py  spotifyObject.py  track.py  user.py
Gustelfy/util/: config.py
backend/: auth.py  main.py  session.py  spotify_api.py  test.py
backend/data/: sqlite3_conf.json
backend/objects/: user.py
backend/util/: cache_handler.py  config.py  database.py
data/: oracledb.sql  sqlite3_conf.json
django_playlist_manager/: models.py  spotify.py  urls.py  views.py
django_playlist_manager/templates/: index.html  playlists.html
doc/: dbstructure.txt
src/: app.py  apps.py  database.py  download.py  fetch.py  gustelify.py  main.py  models.py  spotify.py  spotify_api.py  views.py
src/Gustelfy/util/: config.py
src/backend/Gustelfy/: __main__.py  database.py  main.py  session.py  spotify_api.py  test.py
src/backend/Gustelfy/objects/: album.py  artist.py  playlist.py  track.py
src/objects/: artist.py  track.py
src/playlist_manager/: database.py
src/playlist_manager/objects/: __init__.py
src/playlist_manager/util/: helper.py
src/util/: config.py  database.py
templates/: base.html  index.html
