[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "django_playlist_manager"
requires-python = ">= 3.12"
dependencies = [
    "django>=5.2.1",
    "spotipy >= 2.19.0",
]
description = "Django app for managing spotify playlists."
readme = "README.md"

[project.urls]
Repository = "https://github.com/krippix/PlaylistManager.git"
Issues = "https://github.com/krippix/PlaylistManager/issues"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
